; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/common/extr_vprf.c_PrintRenderingIntents.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/common/extr_vprf.c_PrintRenderingIntents.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"%ct<n> rendering intent:\0A\0A\00", align 1
@SW = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"\09%u - %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PrintRenderingIntents(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [200 x i64], align 16
  %4 = alloca [200 x i8*], align 16
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* @stderr, align 4
  %8 = load i32, i32* @SW, align 4
  %9 = call i32 (i32, i8*, ...) @fprintf(i32 %7, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* %2, align 4
  %11 = getelementptr inbounds [200 x i64], [200 x i64]* %3, i64 0, i64 0
  %12 = getelementptr inbounds [200 x i8*], [200 x i8*]* %4, i64 0, i64 0
  %13 = call i64 @cmsGetSupportedIntents(i32 %10, i32 200, i64* %11, i8** %12)
  store i64 %13, i64* %5, align 8
  store i64 0, i64* %6, align 8
  br label %14

14:                                               ; preds = %27, %1
  %15 = load i64, i64* %6, align 8
  %16 = load i64, i64* %5, align 8
  %17 = icmp ult i64 %15, %16
  br i1 %17, label %18, label %30

18:                                               ; preds = %14
  %19 = load i32, i32* @stderr, align 4
  %20 = load i64, i64* %6, align 8
  %21 = getelementptr inbounds [200 x i64], [200 x i64]* %3, i64 0, i64 %20
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* %6, align 8
  %24 = getelementptr inbounds [200 x i8*], [200 x i8*]* %4, i64 0, i64 %23
  %25 = load i8*, i8** %24, align 8
  %26 = call i32 (i32, i8*, ...) @fprintf(i32 %19, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i64 %22, i8* %25)
  br label %27

27:                                               ; preds = %18
  %28 = load i64, i64* %6, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %6, align 8
  br label %14

30:                                               ; preds = %14
  %31 = load i32, i32* @stderr, align 4
  %32 = call i32 (i32, i8*, ...) @fprintf(i32 %31, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i64 @cmsGetSupportedIntents(i32, i32, i64*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
